--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,11 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-          background-image: url('https://drive.google.com/uc?export=view&id=1sSC7y9wep7PQUUiKcTp13ornlo7_166s');
-
+         background-image: url('https://drive.google.com/uc?export=view&id=1sSC7y9wep7PQUUiKcTp13ornlo7_166s');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            color: Black;
+            color: white;
             text-align: center;
             position: relative;
             display: flex;
