--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-         background-image: url('https://drive.google.com/uc?export=view&id=1sSC7y9wep7PQUUiKcTp13ornlo7_166s');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            color: white;
+             color: orange;
             text-align: center;
             position: relative;
             display: flex;
@@ -215,7 +211,7 @@
 
     <!-- Raj Sir Section -->
     <div class="raj-sir">
-        <img src="F:\download from google\file-G7nQUPFRpmfacWffh6rdkK (1).webp" alt="Raj Sir" class="raj-image">
+        <img src="https://drive.google.com/file/d/1sSC7y9wep7PQUUiKcTp13ornlo7_166s/preview" alt="Raj Sir" class="raj-image">
         <div class="raj-name">Raj Sir</div>
     </div>
 
