--- a/public/index.html
+++ b/public/index.html
@@ -210,10 +210,10 @@
     </header>
 
     <!-- Raj Sir Section -->
-    <div class="raj-sir">
-        <img src="https://drive.google.com/file/d/1sSC7y9wep7PQUUiKcTp13ornlo7_166s/preview" alt="Raj Sir" class="raj-image">
-        <div class="raj-name">Raj Sir</div>
-    </div>
+   <div class="raj-sir">
+    <img src="https://drive.google.com/uc?export=view&id=1sSC7y9wep7PQUUiKcTp13ornlo7_166s" alt="Raj Sir" class="raj-image">
+    <div class="raj-name">Raj Sir</div>
+</div>
 
     <!-- Search Bar -->
     <div class="search-bar">
