--- a/public/index.html
+++ b/public/index.html
@@ -211,10 +211,9 @@
 
     <!-- Raj Sir Section -->
    <div class="raj-sir">
-    <img src="https://drive.google.com/uc?export=view&id=1sSC7y9wep7PQUUiKcTp13ornlo7_166s" alt="Raj Sir" class="raj-image">
+    <img src="images/raj-sir.jpg" alt="Raj Sir" class="raj-image">
     <div class="raj-name">Raj Sir</div>
 </div>
-
     <!-- Search Bar -->
     <div class="search-bar">
         <input type="text" id="search" placeholder="Search for a chapter..." oninput="searchChapters()">
