--- a/public/index.html
+++ b/public/index.html
@@ -341,7 +341,7 @@ h1 {
     <!-- Contact Section -->
     <div id="contact" class="contact-container">
         <h2>Contact for Admission/Demo Lecture</h2>
-        <p>Email: <a href="mailto:rajuacharya00009@gmail.com" style="color: #f39c12;">acharyarajsir@gmail.com</a></p>
+        <p>Email: <a href="mailto:rajuacharya00009@gmail.com" style="color: #f39c12;">rajuacharya00009@gmail.com</a></p>
         <p>Phone: +91 9076171508</p>
     </div>
 
