--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
-           background-image: url('file:///F:/download%20from%20google/DALL·E%202024-12-17%2007.50.26%20-%20An%20educational-themed%20image%20with%20the%20text%20%27Acharya%20Private%20Tutor%27%20prominently%20displayed.%20The%20setting%20is%20a%20classroom%20with%20shelves%20of%20books%20in%20the%20backg.webp');
+           background-image: url('https://drive.google.com/uc?id=1Mi1AqxLlo50RTsJtgzYldX4pZvt8iHRK');
 
             color: #f1c40f;
             font-size: 1rem;
