--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
-           background-image: url('https://drive.google.com/uc?id=1Mi1AqxLlo50RTsJtgzYldX4pZvt8iHRK');
+           background-image: url('https://drive.google.com/file/d/1Mi1AqxLlo50RTsJtgzYldX4pZvt8iHRK/preview');
 
             color: #f1c40f;
             font-size: 1rem;
