--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
-           background-image: url ('');
+           background-image: url ('https://i.postimg.cc/SKj1R5Yx/DALL-E-2024-12-17-07-50-26-An-educational-themed-image-with-the-text-Acharya-Private-Tutor-promi.webp');
 
             color: #f1c40f;
             font-size: 1rem;
