--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
     <!-- Contact Section -->
     <div id="contact" class="contact-container">
         <h2>Contact for Admission/Demo Lecture</h2>
-        <p>Email: <a href="mailto:rajuacharya00009@gmail.com">rajuacharya00009@gmail.com</a></p>
+        <p>Email: <a href="mailto:rajuacharya00009@gmail.com" style="text-transform: lowercase;">rajuacharya00009@gmail.com</a></p>
         <p>Phone: +91 9076171508</p>
     </div>
 
